# pronouns

./: .gitignore  Cargo.toml  README.md
src/: add_pronoun.rs  add_pronouns.rs  get_pronoun.rs  index_page.rs  login.rs  logout.rs  main.rs  mongo_id.rs  profile.rs  pronouns.rs  pronouns_list.rs  register.rs
templates/: add_pronoun.html  base.html  get_pronoun.html  index.html  login.html  profile.html  pronoun_add.html  pronoun_list.html  pronoun_remove.html  register.html
