[package]
name = "pronouns"
version = "0.1.0"
authors = ["frogtd <31412003+frogtd@users.noreply.github.com>"]
edition = "2018"
license = "Unlicense"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
mongodb = "1"
bson = "1"
futures = "0.3.4"
derive_more = "0.99.13"
serde_derive = "1.0.125"
serde = "1.0.125"
rand = "0.8.3"
rand_core = "0.6.2"
askama = "0.8"
hex = "0.4.3"
actix-identity = "0.3.1"
env_logger = "0.8.3"
argon2 = "0.1.5"

[build-dependencies]
minify-html = { version = "0.4.6", features = ["js-esbuild"] }
esbuild-rs = "0.8.30"
futures = "0.3.13"

[profile.release]
debug = true
